tests/baselines/reference/asyncEnum.errors.txt
tests/cases/conformance/async/downlevel/asyncEnum.ts(6,1): error TS1303: 'async' modifier cannot be used with an enum declaration.


==== tests/cases/conformance/async/downlevel/asyncEnum.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    async enum E {  
    ~~~~~
!!! error TS1303: 'async' modifier cannot be used with an enum declaration.
      Value
    }